# qa-challenge

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  conftest.py  pyproject.toml  pytest.ini
libs/core/browser_ops/: __init__.py  browser_ops.py
libs/core/ui/: __init__.py
libs/core/ui/base_element/: base_element.py
libs/core/ui/base_page/: base_page.py
tests/: conftest.py  test_tiwtchtv.py  test_twitchtv.py
ui/components/: __init__.py  mobile_nav_bar.py  streamer_channel.py
ui/pages/: __init__.py  browse_page.py  home_page.py  twitch_base_page.py
ui/pages/components/: mobile_nav_bar.py  streamer_channel.py
